[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/ui/Frames/AnimaFramesEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/Frames/AnimaAddFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/Frames/AnimaFrameAnimation.tscn" type="PackedScene" id=3]

[node name="FramesEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0901961, 0.0941176, 0.129412, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 1000.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FramesContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/HBoxContainer"]
margin_right = 360.0
margin_bottom = 576.0
custom_constants/separation = 12

[node name="InitialFrame" parent="MarginContainer/ScrollContainer/HBoxContainer/FramesContainer" instance=ExtResource( 3 )]
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 180, 288 )
rect_clip_content = false
is_initial_frame = true

[node name="AnimaAddFrame" parent="MarginContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_bottom = 0.0
margin_left = 384.0
margin_right = 744.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 180, 288 )

[connection signal="add_delay" from="MarginContainer/ScrollContainer/HBoxContainer/AnimaAddFrame" to="." method="_on_AnimaAddFrame_add_delay"]
[connection signal="add_frame" from="MarginContainer/ScrollContainer/HBoxContainer/AnimaAddFrame" to="." method="_on_AnimaAddFrame_add_frame"]
